--- a/runtime/onert/api/CMakeLists.txt
+++ b/runtime/onert/api/CMakeLists.txt
@@ -7,12 +7,18 @@ add_library(${ONERT_DEV} SHARED ${API_SRC})
 # nnfw_debug.h is header for runtime developer, so it will not be installed
 # But runtime developer can use nnfw_debug.h by linking nnfw-dev
 set(NNFW_API_HEADERS include/nnfw.h include/nnfw_dev.h)
-
 target_link_libraries(${ONERT_DEV} PUBLIC nnfw-nnapi-header)
 target_link_libraries(${ONERT_DEV} PUBLIC onert_core)
 target_link_libraries(${ONERT_DEV} PRIVATE jsoncpp tflite_loader circle_loader ${LIB_PTHREAD})
 target_link_libraries(${ONERT_DEV} PRIVATE nnfw_common)
 target_link_libraries(${ONERT_DEV} PRIVATE nnfw_coverage)
+
+find_library(LIBANDROID NAMES libandroid.so
+                        PATHS /home/twoflower/dev/ONE2/tools/cross/ndk/r20/ndk/platforms/android-27/arch-arm64/usr/lib
+                        REQUIRED)
+message(STATUS "${LIBANDROID}" )
+
+target_link_libraries(${ONERT_DEV} PUBLIC ${LIBANDROID})
 target_include_directories(${ONERT_DEV} PUBLIC include)
 set_target_properties(${ONERT_DEV} PROPERTIES PUBLIC_HEADER "${NNFW_API_HEADERS}")
 
