--- a/compute/cker/CMakeLists.txt
+++ b/compute/cker/CMakeLists.txt
@@ -7,7 +7,7 @@ target_link_libraries(nnfw_lib_cker INTERFACE eigen)
 target_link_libraries(nnfw_lib_cker INTERFACE gemmlowp)
 target_link_libraries(nnfw_lib_cker INTERFACE ruy)
 target_link_libraries(nnfw_lib_cker INTERFACE ruy_instrumentation)
-target_compile_definitions(nnfw_lib_cker INTERFACE USE_RUY_GEMV)
+#target_compile_definitions(nnfw_lib_cker INTERFACE USE_RUY_GEMV)
 if(PROFILE_RUY)
   target_link_libraries(nnfw_lib_cker INTERFACE ruy_profiler)
 endif(PROFILE_RUY)
